# ChessNNUE

./: .gitignore  .gitignore.txt  CMakeLists.txt
engine/: CMakeLists.txt  bitboard.cpp  bitboard.h  eval.h  magic.cpp  magic.h  main.cpp  move.h  movegen.cpp  movegen.h  order.h  position.cpp  position.h  search.cpp  tt.h  types.h  zobrist.cpp
engine1/: CMakeLists.txt  bitboard.cpp  position.cpp  position.h  search.cpp  search.h  types.h  zobrist.cpp  zobrist.h
